2007-09-16  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/button.cpp: Fixed improper const qualifier.

2007-09-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/items.xml, data/equipment.xml: Added temporary weapon IDs below
	256 to use as view-ID in eAthena's item DB.
	* src/gui/shoplistbox.cpp, src/gui/buy.h, src/gui/buy.cpp: Allowed
	selection of items that cannot be afforded, so that their descriptions
	are still accessible. Also made sure the player's money value of
	ShopItemList gets updated.

2007-09-11  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/chat.cpp, tmw.cbp: Fixed admin commands.

2007-09-10  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* configure.ac, data/fonts/dejavusans.ttf,
	src/gui/browserbox.cpp, src/gui/browserbox.h, src/gui/gui.cpp,
	src/gui/truetypefont.cpp, src/gui/truetypefont.h, src/gui/window.cpp,
	src/main.cpp, src/Makefile.am, src/openglgraphics.cpp, tmw.cbp: Added
	support for True Type Fonts.
	* po/it.po, po/LINGUAS, po/pl.po: Added Polish translation and fixed
	Italian one.
	* src/gui/minimap.cpp: Fixed minimap coordinates and improved look.

2007-09-08  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* po/LINGUAS: Added German to the list of available languages.
	* po/de.po: Fixed two syntax errors preventing compilation.

2007-09-08  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/particles/aniblaze.png,
	data/graphics/particles/cookingfire.particle.xml,
	data/graphics/particles/fireplace.particle.xml,
	data/graphics/particles/flame.particle.xml: Improved fire effects by
	using animated particles.

2007-09-06  Philipp Sehmisch  <tmw@crushnet.org>

	* src/animationparticle.cpp, src/imageparticle.cpp: Fixed animated
	particles.

2007-09-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/Makefile.am: Fixed the entry for windowlistener.h.

2007-08-30  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/localplayer.cpp, src/player.cpp, src/main.cpp, src/being.cpp,